--- a/test.html
+++ b/test.html
@@ -2,17 +2,24 @@
 <html>
   <head>
     <style>
-      body {
+      html, body {
         margin: 0px;
         padding: 0px;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+      }
+      #myCanvas {
+        height: 100%;
+        width: 100%;
       }
     </style>
   </head>
   <body>
-    <canvas id="myCanvas" width="900" height="600" style="background-color: #2c2c2c"></canvas>
+    <canvas id="myCanvas" width="900" height="600" style="background-color: #3d3d3d"></canvas>
     <script src="deploy/pmjs.js" type="text/javascript" charset="utf-8"></script>
     <script>
-      var renderer = new PMJS.Renderer(document.getElementById('myCanvas'), 100);
+      var renderer = new PMJS.Renderer(document.getElementById('myCanvas'));
       renderer.animate();
     </script>
   </body>
